--- a/scripts/first_dataset.ipynb
+++ b/scripts/first_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
     "    haunted_gdf = compute_nearest_distances(haunted_gdf, schools_gdf)\n",
     "\n",
     "    # Add feature 3: Check if haunted place is a school\n",
-    "    haunted_gdf.loc[:, \"is_haunted_place_a_school?\"] = haunted_gdf[\"location\"].str.contains(\n",
+    "    haunted_gdf.loc[:, \"is_haunted_place_a_school\"] = haunted_gdf[\"location\"].str.contains(\n",
     "        \"school\", case=False, na=False\n",
     "    ).map({True: \"Yes\", False: \"No\"})\n",
     "\n",
@@ -107,17 +107,12 @@
     "    return haunted_gdf\n",
     "\n",
     "# Example usage\n",
-    "new1234 = add_public_school_dataset(\"../data/haunted_places.tsv\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "new1234 = add_public_school_dataset(\"../data/haunted_places.tsv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +477,7 @@
        "[9731 rows x 16 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +496,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "d2l",
    "language": "python",
    "name": "python3"
   },
@@ -515,7 +510,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
